force-app/main/default/objects/RejetExtItem__c/RejetExtItem__c.object-meta.xml
<CustomObject>
    <label>RejetExt Item</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RejetExtItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>