force-app/main/default/objects/RejetExtItem__c/fields/CodeRejet__c.field-meta.xml
<CustomField>
    <fullName>CodeRejet__c</fullName>
    <label>Code Rejet</label>
    <length>20</length>
    <type>Text</type>
</CustomField>