force-app/main/default/objects/RejetExtItem__c/fields/Contenu__c.field-meta.xml
<CustomField>
    <fullName>Contenu__c</fullName>
    <label>Contenu</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>