force-app/main/default/objects/RejetExtItem__c/fields/CurrencyRejet__c.field-meta.xml
<CustomField>
    <fullName>CurrencyRejet__c</fullName>
    <label>Currency Rejet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>