force-app/main/default/objects/RejetExtItem__c/fields/DebiteurName__c.field-meta.xml
<CustomField>
    <fullName>DebiteurName__c</fullName>
    <label>Debiteur Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>