force-app/main/default/objects/RejetExtItem__c/fields/MontantRejet__c.field-meta.xml
<CustomField>
    <fullName>MontantRejet__c</fullName>
    <label>Montant Rejet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>