force-app/main/default/objects/RejetExtItem__c/fields/PaymentReference__c.field-meta.xml
<CustomField>
    <fullName>PaymentReference__c</fullName>
    <label>Payment Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>