force-app/main/default/objects/RejetExtItem__c/fields/REF_BE__c.field-meta.xml
<CustomField>
    <fullName>REF_BE__c</fullName>
    <formula>&quot;BE_&quot;+PaymentReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REF BE</label>
    <type>Text</type>
</CustomField>