force-app/main/default/objects/RejetExtItem__c/fields/REF_FR__c.field-meta.xml
<CustomField>
    <fullName>REF_FR__c</fullName>
    <formula>&quot;FR_&quot;+PaymentReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REF FR</label>
    <type>Text</type>
</CustomField>