force-app/main/default/objects/RejetExtItem__c/fields/RejetDate__c.field-meta.xml
<CustomField>
    <fullName>RejetDate__c</fullName>
    <label>Date de rejet</label>
    <type>Date</type>
</CustomField>