force-app/main/default/objects/RejetExtItem__c/fields/RejetExterne__c.field-meta.xml
<CustomField>
    <fullName>RejetExterne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rejet externe</label>
    <referenceTo>RejetExterne__c</referenceTo>
    <relationshipLabel>RejetExtItems</relationshipLabel>
    <relationshipName>RejetExtItems</relationshipName>
    <type>Lookup</type>
</CustomField>