force-app/main/default/objects/RejetExtItem__c/fields/Traiement_OK__c.field-meta.xml
<CustomField>
    <fullName>Traiement_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traiement OK</label>
    <type>Checkbox</type>
</CustomField>